2012-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbtiny.c (usbtiny_paged_load, usbtiny_paged_write):
	fix breakage introduced by the recent page handling reorg;
	it used to cause an infinite loop

2012-05-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Xmega page erase implementation for XPROG (AVRISPmkII, STK600)
	* stk500v2.c (stk600_xprog_page_erase): New function.

2012-05-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Xmega page erase implementation for JTAGICEmkII
	* jtagmkII.c: Handle flash pages sizes > 256 bytes, implement
	page_erase() method
	* avrdude.conf.in: Change flash pagesize for all Xmega devices
	to 512 bytes
	* avr.c: Implement auto_erase, using page_erase if available
	* avr.h: Remove unused parameters from avr_read(), replace
	unused parameter in avr_write)() by auto_erase
	* stk500v2.c: Handle flash page sizes > 256 bytes
	* update.c (do_op): Handle new updateflags parameter
	* main.c: Implement auto_erase as page_erase if possible
	* update.h (enum updateflags): New enum
	* pgm.h (struct programmer_t): Add page_erase method

2012-04-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_paged_load, jtagmkII_paged_write): fix bug
	in memory type calculation for Xmega "boot" memory region.

2012-04-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* update.c (parse_op): do not assume default memtype here
	* main.c: after locating the part information, determine default
	memtype for all update options that didn't have a memtype
	specified; this is "application" for Xmega parts, and "flash" for
	everything else.

2012-04-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c: Rework the way ELF file sections are considered: while
	scanning the program header table, the offsets from a program
	header entry must never be used directly when checking the bounds
	of the current AVR memory region.  Instead, they must always be
	checked based on the corresponding section's entry.  That way,